[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
rppal = { git = "https://github.com/golemparts/rppal.git", rev = "af283afe", default-features = false }
tokio = { version = "1.35", default-features = false, features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["serde-well-known"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["serde"] }
serde_yaml = "0.9"
anyhow = "1.0"
